package MS_Quokka.Utils;

import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.SQLException;
import java.util.ArrayList;

public enum Role {
    ADMIN,
    USER,
    SELLER
}
